edit changes to files

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section class="about primary-theme">
             <h2>About me</h2>
             <div class="about-container">
-                <img src="images/hacktoberfest.jpg" class="about-img" alt="picture of me" />
+                <img src="images/me.jpg" class="about-img" alt="picture of me" />
                 <div class="about-text">
                     <p>
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <blockquote>
-                "She is awesome"
+                "Discipline + Focus + Action = Success"
                 <cite>- another quoted person</cite>
             </blockquote>
         </section>
@@ -98,16 +98,14 @@
     <footer>
         <ul class="social">
             <li class="social-item">
-                <a class="social-link linkedin" href="https://www.linkedin.com/in/jofranchetti/">LinkedIn</a>
+                <a class="social-link linkedin" href="https://www.linkedin.com/in/tiffany-clark-50579757/">LinkedIn</a>
             </li>
+           
             <li class="social-item">
-                <a class="social-link twitter" href="https://twitter.com/ThisIsJoFrank">twitter</a>
-            </li>
-            <li class="social-item">
-                <a class="social-link github" href="https://github.com/thisisjofrank">GitHub</a>
+                <a class="social-link github" href="https://github.com/TiffanyClark">GitHub</a>
             </li>
         </ul>
-        <p>&copy; 2021 - Portfolio design by Your Name</p>
+        <p>&copy; 2022 - Tiffany TiffanyClark/p>
     </footer>
 </body>
 
