--- a/index.html
+++ b/index.html
@@ -24,24 +24,13 @@
                 <img src="images/me.jpg" class="about-img" alt="picture of me" />
                 <div class="about-text">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt
-                        rem aliquam fuga illum esse eos reprehenderit illo facilis molestiae
-                        mollitia! Dignissimos error recusandae, quas ex est commodi aliquid
-                        sit magni.
+                        While I have 6 years of IT experience, I just recently start learning about coding. I went to college for Web Design. I recently completed a bootcamp with Generation USA in May 2022. I joined because I wanted to get a refresh of learning HTML and CSS. ALong the ay, I started learning Javascript.
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse harum
-                        blanditiis, laboriosam optio voluptatem asperiores. Fugiat ab, ea
-                        nulla dolorum veritatis laudantium possimus deserunt quos error
-                        commodi cum cumque fugit.
+                        While learning to become a Software Engineer, I believe and expericed many challenges during my journey. Learning Front End development takes a lot of patience and dedication. Everyday I become more excited from learning things such Bootstrap, Javascipt, Grid, Etc,
                     </p>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                        Accusantium temporibus, tenetur sint praesentium voluptas iste,
-                        sapiente sed nesciunt ipsa optio vero. Vel maiores earum quae sed
-                        totam! Animi, aspernatur debitis?
-                    </p>
-                    <a class="button" href="www.resume.com">My Resume</a>
+                    
+                    <a class="button" href="images/Tiffany Clark_Resume.docx">My Resume</a>
                 </div>
             </div>
             <blockquote>
@@ -53,46 +42,40 @@
             <h2>Projects</h2>
             <article>
                 <div class="article-text">
-                    <h3>Project Title</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi neque, ipsa animi maiores
-                        repellendu distinctioaperiam earum dolor voluptatum consequatur blanditiis inventore debitis
-                        fuga numquam voluptate architecto itaque molestiae.</p>
-                    <a href="#" class="button">See it live</a>
-                    <a href="#" class="button">Fork it on Github</a>
+                    <h3>Typing Game</h3>
+                    <p>This is a typing game that was created using <HTML></HTML>,CSS, and Javascript</p>
+                    <a href="https://tiffanyclark.github.io/Typing-Game/" class="button">See it live</a>
+                    <a href="https://github.com/TiffanyClark/Typing-Game" class="button">Fork it on Github</a>
                 </div>
-                <img src="/images/project.jpg" class="article-img"
+                <img src="/images/rocket.png" class="article-img"
                     alt="Lorem ipsum dolor sit, amet consectetur adipisicing elit.">
             </article>
             <article>
                 <div class="article-text">
-                    <h3>Project Title</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi neque, ipsa animi maiores
-                        repellendu distinctioaperiam earum dolor voluptatum consequatur blanditiis inventore debitis
-                        fuga numquam voluptate architecto itaque molestiae.</p>
-                    <a href="#" class="button">See it live</a>
-                    <a href="#" class="button">Fork it on Github</a>
+                    <h3>Memory Card Game</h3>
+                    <p>This is a memory game I created. I use HTML, CSS, and Javascript. .</p>
+                    <a href="tiffanyclark.github.io/memory-card-game/" class="button">See it live</a>
+                    <a href="https://github.com/TiffanyClark/memory-card-game" class="button">Fork it on Github</a>
                 </div>
-                <img src="/images/project.jpg" class="article-img"
+                <img src="/images/img-5.png" class="article-img"
                     alt="Lorem ipsum dolor sit, amet consectetur adipisicing elit.">
 
             </article>
             <article>
                 <div class="article-text">
-                    <h3>Project Title</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi neque, ipsa animi maiores
-                        repellendu distinctioaperiam earum dolor voluptatum consequatur blanditiis inventore debitis
-                        fuga numquam voluptate architecto itaque molestiae.</p>
-                    <a href="#" class="button">See it live</a>
-                    <a href="#" class="button">Fork it on Github</a>
+                    <h3>Terrarium</h3>
+                    <p>Drag and drop project using Javascript.</p>
+                    <a href="tiffanyclark.github.io/Terrarium/" class="button">See it live</a>
+                    <a href="https://github.com/TiffanyClark/Terrarium" class="button">Fork it on Github</a>
                 </div>
-                <img src="/images/project.jpg" class="article-img"
+                <img src="/images/plant6.png" class="article-img"
                     alt="Lorem ipsum dolor sit, amet consectetur adipisicing elit.">
             </article>
         </section>
         <section class="contact primary-theme">
             <h2>Contact</h2>
             <p>If you'd like to work with me, you can drop me a message!</p>
-            <a href="mailto:email@example.com" class="button">Let's Talk</a>
+            <a href="tiffanylclark85@yahoo.com" class="button">Let's Talk</a>
         </section>
     </main>
     <footer>
@@ -105,7 +88,7 @@
                 <a class="social-link github" href="https://github.com/TiffanyClark">GitHub</a>
             </li>
         </ul>
-        <p>&copy; 2022 - Tiffany TiffanyClark/p>
+        <p>&copy; 2022 - TiffanyClark/p>
     </footer>
 </body>
 
