--- a/index.html
+++ b/index.html
@@ -12,48 +12,48 @@
     <div id="page">
         <div id="left-container" class="container">
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant1" src="./images/plant1.png" />
+                <img class="plant" alt="plant" id="plant1" src="./Images/plant1.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant2" src="./images/plant2.png" />
+                <img class="plant" alt="plant" id="plant2" src="./Images/plant2.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant3" src="./images/plant3.png" />
+                <img class="plant" alt="plant" id="plant3" src="./Images/plant3.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant4" src="./images/plant4.png" />
+                <img class="plant" alt="plant" id="plant4" src="./Images/plant4.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant5" src="./images/plant5.png" />
+                <img class="plant" alt="plant" id="plant5" src="./Images/plant5.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant6" src="./images/plant6.png" />
+                <img class="plant" alt="plant" id="plant6" src="./Images/plant6.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant7" src="./images/plant7.png" />
+                <img class="plant" alt="plant" id="plant7" src="./Images/plant7.png" />
             </div>
         </div>
         <div id="right-container" class="container">
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant8" src="./images/plant8.png" />
+                <img class="plant" alt="plant" id="plant8" src="./Images/plant8.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant9" src="./images/plant9.png" />
+                <img class="plant" alt="plant" id="plant9" src="./Images/plant9.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant10" src="./images/plant10.png" />
+                <img class="plant" alt="plant" id="plant10" src="./Images/plant10.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant11" src="./images/plant11.png" />
+                <img class="plant" alt="plant" id="plant11" src="./Images/plant11.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant12" src="./images/plant12.png" />
+                <img class="plant" alt="plant" id="plant12" src="./Images/plant12.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant13" src="./images/plant13.png" />
+                <img class="plant" alt="plant" id="plant13" src="./Images/plant13.png" />
             </div>
             <div class="plant-holder">
-                <img class="plant" alt="plant" id="plant14" src="./images/plant14.png" />
+                <img class="plant" alt="plant" id="plant14" src="./Images/plant14.png" />
             </div>
         </div>
         <div id="terrarium">
